Issue #16243: Fixed left column alignment

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -178,6 +178,8 @@ code {
 }
 
 #leftColumn {
+  position: relative;
+  top: -14px; 
   min-width: 250px;
   width: fit-content;
 }
